[ADD] New mobile version

--- a/interface/index.html
+++ b/interface/index.html
@@ -118,7 +118,7 @@
       cursor: pointer;
     }
     #page-title-input {
-      width: 90%;
+      width: 95%;
       padding: 8px;
       margin-top: 10px;
       font-size: 16px;
@@ -150,15 +150,25 @@
   <div id="left-panel">
     <div class="draggable" draggable="true" data-type="Button">Button</div>
     <div class="draggable" draggable="true" data-type="Radio Group">Radio Group</div>
-    <div class="draggable" draggable="true" data-type="Form">Form</div>
+    <div class="draggable" draggable="true" data-type="Text Field">Text Field</div>
     <div class="draggable" draggable="true" data-type="Image">Image</div>
     <div class="draggable" draggable="true" data-type="Text">Text</div>
-    <div class="draggable" draggable="true" data-type="Selector">Selector</div>
+    <div class="draggable" draggable="true" data-type="Picker">Picker</div>
     <div class="draggable" draggable="true" data-type="Header 1">Header 1</div>
     <div class="draggable" draggable="true" data-type="Header 2">Header 2</div>
     <div class="draggable" draggable="true" data-type="Header 3">Header 3</div>
-    <div class="draggable" draggable="true" data-type="Slider">Slider</div>
-    <div class="draggable" draggable="true" data-type="Text Field">Text Field</div>
+    <div class="draggable" draggable="true" data-type="Progress Bar">Progress Bar</div>
+    <div class="draggable" draggable="true" data-type="External Link">External Link</div>
+    <div class="draggable" draggable="true" data-type="Refresh">Refresh</div>
+    <div class="draggable" draggable="true" data-type="While">While</div>
+    <div class="draggable" draggable="true" data-type="For">For</div>
+    <div class="draggable" draggable="true" data-type="Set Variable">Set Variable</div>
+    <div class="draggable" draggable="true" data-type="If">If</div>
+    <div class="draggable" draggable="true" data-type="Then">Then</div>
+    <div class="draggable" draggable="true" data-type="Else">Else</div>
+    <div class="draggable" draggable="true" data-type="End">End</div>
+    <div class="draggable" draggable="true" data-type="New Variable">New Variable</div>
+    <div class="draggable" draggable="true" data-type="API Request">[Technical] API Request</div>
   </div>
 
   <div id="middle-panel">
@@ -175,7 +185,7 @@
   <div id="pageModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <h2>New Page</h2>
+      <h2 style="color: black;">New Page</h2>
       <input type="text" id="page-title-input" placeholder="Enter page title">
       <button id="save-page-button">Save</button>
     </div>
